# computer-graphics

./: .gitignore  CMakeLists.txt  DistanceCalculator.h  Matrix.h  Planet.h  README.txt  ReferenceSystem.h  Test.cpp  Test.h  Vec.cpp  Vec.h  Ventana.ppm  compilar  cosas hacer  exception.h  geometry.h  main.cpp
imaging/: Image.h  RGB.h  imaging.cpp
imaging/tests/: image_test.cpp  lest.hpp
render/: Light.h  Object.h  Plane.h  RandomNumber.h  Render.h  Sphere.h  Square.h  render.cpp
render/tests/: render_test.cpp
tests/: geometry_test.cpp
